Fix spelling errors and remove periods from list items

--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -72,7 +72,7 @@ to deliver a working *Minimal Viable Product* (MVP).
 The challenges in the project were: 
 
 - Finding a secure, scalable way to deliver and store telemetry data
-- Understanding how to work and prepare the telemetry data for machine learning (ML)
+- Understanding how to work and prepare the telemetry data for Machine Learning (ML)
 - Configure Azure ML to do anomaly detection on the data
 - Connect the anomaly detection results to the ***Smart Water*** application
 
@@ -98,7 +98,7 @@ Questions, comments and feedback were discussed daily, and made the hackfest the
 
 > ***Key learning*** <br />
 > Had we not decided to spend time in the dataweek, we would not have been able to do deliver a complete end-to-end solution like we did in this hackfest. 
-> Investigating correlations between diffent data was central in the work we did during the hackfest, which mainly revolved around creating a working machine learning model.
+> Investigating correlations between diffent data was central in the work we did during the hackfest, which mainly revolved around creating a working Machine Learning model.
 
 *Discussing water grids, elevations, and valves*
 
@@ -107,7 +107,7 @@ Questions, comments and feedback were discussed daily, and made the hackfest the
 ## Solution 
 
 The ***Smart Water*** solution monitors current water flow into a water distibution system and, in near-real-time, detect anomalies compared to a ML based prediction. 
-The operators will then see alerts in their application, together with enough insight to take the approperiate actions. 
+The operators will then see alerts in their application, together with enough insight to take the appropriate actions. 
 The goal, of course, is stopping the leakage as early as possible.
 When more sensors and smart water meters are installed, the solution will have a potential to provide even more intelligence. 
 
@@ -121,9 +121,9 @@ When more sensors and smart water meters are installed, the solution will have a
 ### Data available for analysis 
 
 For this project, we had the following data available:
--	Sensor data for water flow into a few of the water distribution zones in Trondheim municipality. The sensor data had a variety in frequency and time span. 
--   The goal was to have a complete data set for the three previous years (2013 – 2015), but due to issues with sensor availability there were some gaps in the data. 
--	Reports written by the municipality on various incidents / repairs done related to the water distribution system.
+-	Sensor data for water flow into a few of the water distribution zones in Trondheim municipality. The sensor data had a variety in frequency and time span
+-   The goal was to have a complete data set for the three previous years (2013 – 2015), but due to issues with sensor availability there were some gaps in the data
+-	Reports written by the municipality on various incidents / repairs done related to the water distribution system
 
 *SCADA Sensor*
 
@@ -149,8 +149,8 @@ We were able to obtain 3 years of telemetry from a friendly municipality and in 
 we wrote a simulator application that replaced the timestamp of that dataset with the current time, and before sending the data to the [Azure IoT Hub](https://azure.microsoft.com/en-us/services/iot-hub/). 
 #### Device Simulator
 The simulator was written in an [Azure Function](https://azure.microsoft.com/en-us/services/functions/), which limited the transmit frequency to 1 minute. 
-The Scada sensors are able to transmit telemetry in 15 second intervals, but will require gateway software to connect to IoT Hub. We do not see any 
-major problems in creating such a gateway, and the one minute interval was enough to go ahead
+The SCADA sensors are able to transmit telemetry in 15 second intervals, but will require gateway software to connect to IoT Hub. We do not see any 
+major problems in creating such a gateway, and the one minute interval was enough to go ahead.
 
 #### Security
 The IoT Hub allows only registered devices to communicate with it and each registered device gets its own, "personal" connection string. 
@@ -166,7 +166,7 @@ Since we already had set up the IoT Hub stream, as well as created a storage acc
 ```sql
 SELECT * INTO [SmartWaterSimulatorOutput] FROM [SmartWaterSimulatorInput]
 
-SELECT * INTO [ScadaQueue] FROM [SmartWaterSimulatorInput]
+SELECT * INTO [SCADAQueue] FROM [SmartWaterSimulatorInput]
 ```
 
 As you can see, there are **two** statements in here, one takes the data from the IoT Hub stream and stores it directly into Table Storage, and the second takes the same telemetry, 
@@ -182,8 +182,8 @@ The files also had differences in update intervals, and some even contained sens
 To simplify the processing of this, we created a C# program to pre-process the data by doing the following:
 -	Combine different Excel files / tabs for various sensors for a water distribution zone into one consolidated CSV file
 -	Calculate the total water flow into a zone by correctly considering the sensors measuring water flowing in / out of a zone
--	Create a uniform frequency for the sensor data by aggregating / distributing values on fixed intervals.
--	Splitting Datetime column into Year, Weekday (Monday, Tuesday, ..., Sunday), Quarter, Month, Hour, FiveMinute (each 24-hour split into 5-minute intervals), Holiday (flag for public holidays).
+-	Create a uniform frequency for the sensor data by aggregating / distributing values on fixed intervals
+-	Splitting Datetime column into Year, Weekday (Monday, Tuesday, ..., Sunday), Quarter, Month, Hour, FiveMinute (each 24-hour split into 5-minute intervals), Holiday (flag for public holidays)
 
 >**Lessons learned**
 >
@@ -194,7 +194,7 @@ To simplify the processing of this, we created a C# program to pre-process the d
 
 Visualization is always a fantastic way to understand data, so we chose [Power BI Desktop](https://powerbi.microsoft.com/en-us/desktop/) to explore the data using various kind of visualizations. 
  This allowed us to quickly look for patterns and get a lot of insight into the data. 
- We identified the fields that we needed to include in the dataset and also what kind of cleaning that needed to be done before we started to experiment with data in machine learning.
+ We identified the fields that we needed to include in the dataset and also what kind of cleaning that needed to be done before we started to experiment with data in Machine Learning.
 
  *Data Visualisation in PowerBI*
 ![Data Visualisation in PowerBI](../images/powel/PowerBIVisualize1.jpg)
@@ -206,13 +206,13 @@ a daily pattern with some exceptions of weekends and possibly public holidays.
 To allow for a somewhat granular model for water flow within a 24-hour period, we decided to split every 24-hour into 5-minute intervals. 
 We also included a flag to indicate whether a given sample time is associated with a public holiday or not.
 
-We created the following Azure ML Experiment to test various features and machine learning algorithms:
+We created the following Azure ML Experiment to test various features and Machine Learning algorithms:
 
 *Azure Machine Learning Experiment*
 ![Azure Machine Learning Experiment](../images/powel/AzureMLExperiment.png)
 
 ### Eureka!
-Testing with different set of features and machine learning algorithms in Azure ML was very easy! 
+Testing with different set of features and Machine Learning algorithms in Azure ML was very easy! 
 
 To be able to separate noise from real anomalies we experimented a lot with various ways to visualize the residuals between the predicted values and the actual values. 
 We decided to go for a model, where we create a sliding windows of residuals. 
@@ -221,7 +221,7 @@ Then we calculate the percentage of the difference between the actual value and 
 When visualizing the residuals, we also filtered out the low values.
 
 > *Key takeaway* <br/>
-> It is very important to use a tool such as PowerBI for visualizing the results of the machine learning!
+> It is very important to use a tool such as PowerBI for visualizing the results of the Machine Learning!
 
 Image: *Overlaying historical data on top of the Machine Learning prediction*
 ![Overlaying historical data on top of the Machine Learning prediction](../images/powel/PowerBIVisualize2.jpg)
@@ -233,7 +233,7 @@ We wanted to compare our findings against the history of maintenance reports to 
 > 
 > Trying to correlate time series data from sensors with manually entered maintenance reports is a challenge since they're very loosely coupled with the sensor data.
 >
-> We therefore decided to keep the manual report data *out* of the machine learning models. 
+> We therefore decided to keep the manual report data *out* of the Machine Learning models. 
 
 Even though we decided to skip the manually entered reports in the Machine Learning experiment, we still used them extensively to see and understand the data in Power BI. 
 It largely helped us in strengthening our hypothesis that we would be able to build an application to monitor the current actual water flow and trigger alarms based on 
@@ -242,17 +242,17 @@ deviations from the predicted curve.
 
 ## Conclusion 
 
-It is nothing short of amazing that during the course of *five days* were able to put together a secure IoT solution where every working part required little effort. 
+It is nothing short of amazing that during the course of *five days* we were able to put together a secure IoT solution where every working part required little effort. 
 
-We were able to create a reasonably good machine learning model to predict future water flow values based on simple inputs like date, time and water flow. 
+We were able to create a reasonably good Machine Learning model to predict future water flow values based on simple inputs like date, time and water flow. 
 We were also able to create a good visualization of historical data to highlight the anomalies in our ***Smart Water*** application. 
 Correlating anomalies with the manual inspection reports was done in the application. 
 We also created an end to end demo application for monitoring and alerting potential water leakages. 
 This provided us with enough confidence needed to take this to the next phase.
 
 #### Lessons Learned
-- Setting up a secure, scalable IoT system using Azure is a breeze. Azure provides all the required components to host such as system, and in a *proof-of-concept* gone bad, it can just as easilly be taken down again, securing a low investment cost / easy exit.
-- The science behind Machine Learning still requires significant knowledge about the problem domain as well as some experience in statistical analysis. Powel is doing the necessary investments to ensure they have this competency in place.
+- Setting up a secure, scalable IoT system using Azure is a breeze. Azure provides all the required components to host such as system, and in a *proof-of-concept* gone bad, it can just as easilly be taken down again, securing a low investment cost / easy exit
+- The science behind Machine Learning still requires significant knowledge about the problem domain as well as some experience in statistical analysis. Powel is doing the necessary investments to ensure they have this competency in place
 - The architecture and structure in this solution can be applied to many of Powel's other projects
 
 #### Going forward
@@ -261,7 +261,7 @@ The next step for Powel is to finish up the last bits and pieces of the applicat
 An analyst has been introduced to the project to help work with the Machine Learning model further. Together with Microsoft, Powel is making significant investments in aquiring
 expertise on data science, ML integration, data analysis and domain expertise.
 
-Further down the line, we will be looking at automating water-pressure in various grids based on machine learning predictions. 
+Further down the line, we will be looking at automating water-pressure in various grids based on Machine Learning predictions. 
 This to provide just enough water pressure based on predictions. 
 
 ![Leaking water](../images/powel/leaking.jpg)
