Add the names of the Microsoft Evangelists in the hackfest

--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -42,12 +42,13 @@ To achieve this, the following technologies were used:
 
 The roles that took part in the hackfest were: 
 
-| Company   | Role                         |
-| -------   | ----                         |
-| Powel     | Project lead                 | 
-|           | Domain expert, water         | 
-| BEKK      | ML, IoT Ingestion            |
-| Microsoft | Two technical evangelists    | 
+| Company   | Role                         | Name |
+| -------   | ----                         | ---- |
+| Powel     | Project lead                 | -    |  
+|           | Domain expert, water         | -    |
+| BEKK      | ML, IoT Ingestion            | -    | 
+| Microsoft | Technical Evangelist         | [Pedro Dias](http://twitter.com/digitaldias) |
+|           | Technical Evangelist         | [Olav Tollefsen](http://twitter.com/olavtoll) |
  
 
 ## Customer Profile
