Fix Azure Machine Learning Services and add missing Stream Analytics under IoT Technologies in use

--- a/_posts/2016-11-18-Powel.md
+++ b/_posts/2016-11-18-Powel.md
@@ -28,12 +28,13 @@ To achieve this, the following technologies were used:
 
 - Telemetry provided by SCADA sensors (*supervisory control and data acquisition*), measuring water flow and pressure
 - Azure Functions
+- IoT Hub for massive-scale ingestion of sensor telemetry
+- Azure Table storage for storing the telemetry
+- Azure DocumentDB for storing correlated data
 - Cortana Intelligence Suite
-  - IoT Hub for massive-scale ingestion of sensor telemetry
-  - Azure Table storage for storing the telemetry
-  - Azure DocumentDB for storing correlated data
+  - Stream Analytics for connecting the data streams
   - Azure Machine Learning for doing anomaly detection
-- Microsoft Power BI for visualizing and understanding the data
+  - Microsoft Power BI for visualizing and understanding the data
 
 
 ### Hackfest members
