--- a/_posts/2016-12-01-nexosis.md
+++ b/_posts/2016-12-01-nexosis.md
@@ -13,9 +13,7 @@ verticals: Retail, Consumer Products & Services
 language: English
 ---
 
-**EDITOR: RESTORE TRANSPARENCY TO LOGO AND UPDATE TAG**
-
-<img src="{{ site.baseurl }}/images/nexosis/logo-horizontal.png" alt="Nexosis logo" style="width: 250px;"/>
+![Nexosis logo]({{ site.baseurl }}/images/nexosis/logo-horizontal.png)
 
 Startup company Nexosis is looking to optimize the time a new feature takes going from ideation and into their customers' hands, using the DevOps practices of Infrastructure as Code, continuous integration, and automated testing, among others.
 
@@ -26,8 +24,6 @@ The technologies discussed include Azure Resource Manager template-driven deploy
 ## Customer profile ##
 
 Founded in early 2015, [Nexosis](http://nexosis.com/) is a startup company of thirteen employees based in Columbus, Ohio. (See their full team and investors at [Our Team](http://nexosis.com/Home/Team).) They are a graduate of the [TechStars Retail accelerator](http://www.techstars.com/programs/retail-program/) program. Their main product, Axon, “ingests multiple data sources to create actionable insights.” Axon can take advantage of standard input feeds, such as sales transactions or traffic counts, and uses self-learning algorithms that adjust to a customer's baselines and trends. With this information, Axon can provide forecasts to make better-informed decisions.
-
-**EDITOR: RESTORE TRANSPARENCY TO LOGO AND UPDATE TAG**
 
 ![Diagram of value proposition for Axon]({{ site.baseurl }}/images/nexosis/nexosis2.png)
 
