--- a/_posts/2016-12-01-nexosis.md
+++ b/_posts/2016-12-01-nexosis.md
@@ -8,7 +8,7 @@ date: 2017-03-02
 categories: [DevOps]
 color: "blue"
 #image: "{{ site.baseurl }}/images/nexosis/logo-horizontal.png" #should be ~350px tall
-excerpt: Nexosis wants to optimize the time a new feature takes going from ideation and into their customers' hands, using the DevOps practices of “Infrastructure as Code”, “continuous integration”, and “automated testing.”
+excerpt: Nexosis wants to optimize the time a new feature takes going from ideation and into their customers' hands, using the DevOps practices of Infrastructure as Code, continuous integration, and automated testing.
 verticals: Retail, Consumer Products & Services
 language: English
 ---
